Started separating work between Drupal and LooBack API scripts.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "ace_importer.js",
   "dependencies": {
-    "restler-q": "^0.1.1"
+    "restler-q": "^0.1.1",
+    "string-template": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
