Added map cache generating script that gets data from a Drupal view.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "fs": "0.0.2",
+    "pg-promise": "^4.4.0",
     "restler-q": "^0.1.1",
-    "underscore": "^1.8.3"
+    "turf": "^3.0.5",
+    "underscore": "^1.8.3",
+    "wellknown": "^0.4.2"
   },
   "devDependencies": {},
   "scripts": {
