--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "fs": "0.0.2",
+    "moment": "^2.13.0",
     "pg-promise": "^4.4.0",
     "restler-q": "^0.1.1",
     "turf": "^3.0.5",
